SLT_Handler/Include/MMC/MMMCWHP220.h

/*---------------------------------------------------------------------------*/
/* Event Source Status defines                                               */
/*---------------------------------------------------------------------------*/
#define		ST_NONE					0x0000
#define		ST_HOME_SWITCH			0x0001
#define		ST_POS_LIMIT			0x0002
#define		ST_NEG_LIMIT   			0x0004
#define		ST_AMP_FAULT			0x0008
#define		ST_A_LIMIT    			0x0010
#define		ST_V_LIMIT  			0x0020
#define		ST_X_NEG_LIMIT 			0x0040
#define		ST_X_POS_LIMIT			0x0080
#define		ST_ERROR_LIMIT			0x0100
#define		ST_PC_COMMAND  			0x0200
#define		ST_OUT_OF_FRAMES    	0x0400
#define		ST_AMP_POWER_ONOFF  	0x0800
#define		ST_ABS_COMM_ERROR   	0x1000
#define		ST_INPOSITION_STATUS	0x2000
#define		ST_RUN_STOP_COMMAND 	0x4000 		
#define		ST_COLLISION_STATE  	0x8000 		
/*---------------------------------------------------------------------------*/
/* Digital Filter Defines                                                    */
/*---------------------------------------------------------------------------*/
#define		GAIN_NUMBER			5	/* elements expected get/set_filter(...) */
/* In windows programs, there is no easy way to export its global variable,  */
/* other than functions to other module referencing this DLL.                */
INT API get_mmc_error( VOID);
INT	API get_version( VOID);
INT	API get_axis_num( VOID);
INT	API get_bd_num( VOID);
INT	API get_velocity(INT ax);
INT API mmc_initx(INT len, pLONG dp_addr);
INT	API version_chk(INT bn, pINT ver);
INT API set_dpram_addr(INT bdnum, LONG addr);
INT API get_dpram_addr(INT bdnum, pLONG addr);
INT API save_boot_frame(VOID);
INT API mmc_axes(INT, pINT);
INT API mmc_all_axes(VOID);
INT API get_stepper(INT ax);
INT API set_stepper(INT ax);
INT API set_servo(INT ax);
INT API set_feedback(INT ax, INT device);
INT API get_feedback(INT ax, pINT device);
INT API set_closed_loop(INT ax, INT loop);
INT API get_closed_loop(INT ax, pINT loop);
INT API set_unipolar(INT ax, INT state);
INT API get_unipolar(INT ax);
INT API set_abs_encoder(INT ax);
INT API get_micro_stepper(INT ax);
INT API set_micro_stepper(INT ax);
INT API mmcDelay(LONG duration);
INT API mmc_dwell(INT ax, LONG duration);
INT API mmc_io_trigger(INT ax, INT bitNo, INT state);
INT API get_counter(INT ax, pDOUBLE pos);
INT API get_sync_position(pDOUBLE pos_m, pDOUBLE pos_s);
INT API set_position(INT ax, DOUBLE pos);
INT API get_position(INT ax, pDOUBLE pos);
INT API set_command(INT ax, DOUBLE pos);
INT API get_command(INT ax, pDOUBLE pos);
INT API get_error(INT ax, pDOUBLE error);
INT API get_com_velocity(INT ax);
INT API get_act_velocity(INT ax);
INT API in_sequence(INT ax);
INT API in_motion(INT ax);
INT API in_position(INT ax);
INT API frames_left(INT ax);
INT API motion_done(INT ax);
INT API axis_done(INT ax);
INT API axis_state(INT ax);
INT API axis_source(INT ax);
LONG API axis_sourcex(INT ax);
INT API clear_status(INT ax);
INT API frames_clear(INT ax);
INT API map_axes(INT n_axes, pINT map_array);
INT API set_move_speed(DOUBLE speed);
INT API set_move_accel(INT accel);
INT API set_arc_division(DOUBLE degrees);
INT API all_done(VOID);
INT API move_2(DOUBLE x, DOUBLE y);
INT API move_3(DOUBLE x, DOUBLE y, DOUBLE z);
INT API move_4(DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w);
INT API move_n(pDOUBLE x);
INT API move_2ax(INT ax1, INT ax2, DOUBLE x, DOUBLE y, DOUBLE vel, INT acc);
INT API move_3ax(INT ax1, INT ax2, INT ax3, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE vel, INT acc);
INT API move_4ax(INT ax1, INT ax2, INT ax3, INT ax4, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w, DOUBLE vel, INT acc);
INT API move_nax(INT len, pINT ax, pDOUBLE pos, DOUBLE vel, INT acc);
INT API move_2axgr(INT gr, INT ax1, INT ax2, DOUBLE x, DOUBLE y, DOUBLE vel, INT acc);
INT API move_3axgr(INT gr, INT ax1, INT ax2, INT ax3, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE vel, INT acc);
INT API move_4axgr(INT gr, INT ax1, INT ax2, INT ax3, INT ax4, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w, DOUBLE vel, INT acc);
INT API smove_2(DOUBLE x, DOUBLE y);
INT API smove_3(DOUBLE x, DOUBLE y, DOUBLE z);
INT API smove_4(DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w);
INT API smove_n(pDOUBLE x);
INT API smove_2ax(INT ax1, INT ax2, DOUBLE x, DOUBLE y, DOUBLE vel, INT acc);
INT API smove_3ax(INT ax1, INT ax2, INT ax3, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE vel, INT acc);
INT API smove_4ax(INT ax1, INT ax2, INT ax3, INT ax4, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w, DOUBLE vel, INT acc);
INT API smove_nax(INT len, pINT ax, pDOUBLE pos, DOUBLE vel, INT acc);
INT API smove_2axgr(INT gr, INT ax1, INT ax2, DOUBLE x, DOUBLE y, DOUBLE vel, INT acc);
INT API smove_3axgr(INT gr, INT ax1, INT ax2, INT ax3, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE vel, INT acc);
INT API smove_4axgr(INT gr, INT ax1, INT ax2, INT ax3, INT ax4, DOUBLE x, DOUBLE y, DOUBLE z, DOUBLE w, DOUBLE vel, INT acc);
INT API arc_2(DOUBLE x_center, DOUBLE y_center, DOUBLE angle);
INT API arc_2ax(INT ax1, INT ax2, DOUBLE x_center, DOUBLE y_center, DOUBLE angle, DOUBLE vel, INT acc);
INT API spl_line_move2(pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_line_move3(pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_line_move2ax(INT ax1, INT ax2, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_line_move3ax(INT ax1, INT ax2, INT ax3, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API spl_arc_move2(DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_move3(DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_move2ax(INT ax1, INT ax2, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_arc_move3ax(INT ax1, INT ax2, INT ax3, DOUBLE x_center, DOUBLE y_center, pDOUBLE pnt, DOUBLE vel, INT acc, INT cdir);
INT API spl_move(INT len, INT ax1, INT ax2, INT ax3, pDOUBLE pnt1, pDOUBLE pnt2, pDOUBLE pnt3, DOUBLE vel, INT acc);
INT API rect_move(INT ax1, INT ax2, pDOUBLE pnt, DOUBLE vel, INT acc);
INT API set_spl_auto_off(INT bd_num,INT mode);